--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20",
-    "sqlite3": "^5.1.4"
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "sqlite3": "^5.1.6"
   }
 }
